<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorScreenBg"
    tools:context=".activities.AddEmpActivity">

    <include layout="@layout/custom_toolbar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/custom_toolbar"
        android:orientation="vertical"
        android:layout_margin="@dimen/dim_10dp">

        <TextView
            android:id="@+id/txt_btn_save"
            android:layout_width="160dp"
            android:layout_height="45dp"
            android:gravity="center|center_vertical"
            android:layout_gravity="center"
            android:text="Save"
            android:elevation="@dimen/dim_5dp"
            android:shadowColor="@color/colorPrimary"
            android:layout_marginVertical="@dimen/dim_15dp"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/txt_size_16sp"
            android:background="@drawable/solid_rounded_blue_btn"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>

        <ScrollView
            android:id="@+id/scroll"
            android:layout_above="@id/txt_btn_save"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dim_10dp"
                    android:id="@+id/card_emp_name"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    app:cardCornerRadius="@dimen/dim_25dp"
                    app:cardElevation="@dimen/dim_5dp"
                    android:padding="@dimen/dim_10dp"
                    android:layout_marginHorizontal="5dp"
                    android:divider="@color/colorPrimaryDark"
                    app:cardBackgroundColor="@color/colorWhite"
                    android:dividerHeight="1.0px"
                    android:outlineSpotShadowColor="@color/colorPrimaryDark"
                    android:outlineProvider="background"
                    android:clipToPadding="false"
                    android:clipChildren="false">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edt_emp_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/dim_12dp"
                            android:background="@android:color/transparent"
                            android:hint="@string/str_hint_employee_name"
                            android:inputType="text"
                            android:padding="@dimen/dim_10dp"
                            android:singleLine="true"
                            android:textColorHint="@color/colorFentText"
                            android:textSize="@dimen/txt_size_14sp" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dim_10dp"
                    android:id="@+id/card_emp_mobile_num"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    app:cardCornerRadius="@dimen/dim_25dp"
                    app:cardElevation="@dimen/dim_5dp"
                    android:padding="@dimen/dim_10dp"
                    android:layout_marginHorizontal="5dp"
                    android:divider="@color/colorPrimaryDark"
                    app:cardBackgroundColor="@color/colorWhite"
                    android:dividerHeight="1.0px"
                    android:outlineSpotShadowColor="@color/colorPrimaryDark"
                    android:outlineProvider="background"
                    android:clipToPadding="false"
                    android:clipChildren="false">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edt_emp_mobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/dim_12dp"
                            android:background="@android:color/transparent"
                            android:hint="@string/str_hint_mobile_number"
                            android:maxLength="10"
                            android:inputType="phone"
                            android:padding="@dimen/dim_10dp"
                            android:singleLine="true"
                            android:textColorHint="@color/colorFentText"
                            android:textSize="@dimen/txt_size_14sp" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dim_10dp"
                    android:id="@+id/card_emp_address"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    app:cardCornerRadius="@dimen/dim_25dp"
                    app:cardElevation="@dimen/dim_5dp"
                    app:cardBackgroundColor="@color/colorWhite"
                    android:padding="@dimen/dim_10dp"
                    android:layout_marginHorizontal="5dp"
                    android:divider="@color/colorPrimaryDark"
                    android:dividerHeight="1.0px"
                    android:outlineSpotShadowColor="@color/colorPrimaryDark"
                    android:outlineProvider="background"
                    android:clipToPadding="false"
                    android:clipChildren="false">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edt_emp_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/dim_12dp"
                            android:background="@android:color/transparent"
                            android:hint="@string/str_hint_address"
                            android:inputType="textPostalAddress"
                            android:padding="@dimen/dim_10dp"
                            android:singleLine="true"
                            android:textColorHint="@color/colorFentText"
                            android:textSize="@dimen/txt_size_14sp" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dim_10dp"
                    android:id="@+id/card_emp_username"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    app:cardCornerRadius="@dimen/dim_25dp"
                    app:cardElevation="@dimen/dim_5dp"
                    android:padding="@dimen/dim_10dp"
                    android:layout_marginHorizontal="5dp"
                    android:divider="@color/colorPrimaryDark"
                    app:cardBackgroundColor="@color/colorWhite"
                    android:dividerHeight="1.0px"
                    android:outlineSpotShadowColor="@color/colorPrimaryDark"
                    android:outlineProvider="background"
                    android:clipToPadding="false"
                    android:clipChildren="false">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edt_emp_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/dim_12dp"
                            android:background="@android:color/transparent"
                            android:hint="@string/str_hint_username"
                            android:inputType="textPostalAddress"
                            android:padding="@dimen/dim_10dp"
                            android:singleLine="true"
                            android:textColorHint="@color/colorFentText"
                            android:textSize="@dimen/txt_size_14sp" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dim_10dp"
                    android:id="@+id/card_emp_password"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    app:cardCornerRadius="@dimen/dim_25dp"
                    app:cardElevation="@dimen/dim_5dp"
                    android:padding="@dimen/dim_10dp"
                    android:layout_marginHorizontal="5dp"
                    android:divider="@color/colorPrimaryDark"
                    app:cardBackgroundColor="@color/colorWhite"
                    android:dividerHeight="1.0px"
                    android:outlineSpotShadowColor="@color/colorPrimaryDark"
                    android:outlineProvider="background"
                    android:clipToPadding="false"
                    android:clipChildren="false">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edt_emp_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/dim_12dp"
                            android:background="@android:color/transparent"
                            android:hint="@string/str_hint_password"
                            android:inputType="textPassword"
                            android:padding="@dimen/dim_10dp"
                            android:singleLine="true"
                            android:textColorHint="@color/colorFentText"
                            android:textSize="@dimen/txt_size_14sp" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dim_10dp"
                    android:id="@+id/card_emp_login_num"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    app:cardCornerRadius="@dimen/dim_25dp"
                    app:cardElevation="@dimen/dim_5dp"
                    android:padding="@dimen/dim_10dp"
                    android:layout_marginHorizontal="5dp"
                    android:divider="@color/colorPrimaryDark"
                    app:cardBackgroundColor="@color/colorScreenBg"
                    android:dividerHeight="1.0px"
                    android:outlineSpotShadowColor="@color/colorPrimaryDark"
                    android:outlineProvider="background"
                    android:clipToPadding="false"
                    android:clipChildren="false">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edt_emp_login_num"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="@dimen/dim_12dp"
                            android:background="@android:color/transparent"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:hint="@string/str_hint_login_number"
                            android:inputType="text"
                            android:padding="@dimen/dim_10dp"
                            android:singleLine="true"
                            android:textColorHint="@color/colorFentText"
                            android:textSize="@dimen/txt_size_14sp" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginVertical="@dimen/dim_8dp"
                    android:layout_marginStart="@dimen/dim_40_dp">

                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:text="@string/str_chkbox_clear_login"
                        android:buttonTint="@color/colorPrimaryDark"
                        android:layout_gravity="center"
                        android:padding="@dimen/dim_10dp"
                        android:textSize="@dimen/txt_size_12sp"
                        style="@style/CheckBox"
                        android:gravity="center_vertical"
                        android:elevation="@dimen/dim_8dp"
                        android:layout_marginStart="@dimen/dim_10dp"
                        android:layout_height="wrap_content"/>
                    <CheckBox
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:buttonTint="@color/colorPrimaryDark"
                        style="@style/CheckBox"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dim_10dp"
                        android:elevation="@dimen/dim_8dp"
                        android:layout_marginStart="@dimen/dim_10dp"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/txt_size_12sp"
                        android:text="@string/str_chkbox_is_active"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</RelativeLayout>